v2/das-06-go-noc-controller/deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: das-noc
  labels:
    app.kubernetes.io/part-of: das-noc
